# Ecommerce-ED

./: .gitattributes  .gitignore  404.html  COLABORATORS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  search.html
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: deploy-mkdocs.yml
airflow/: .ambiente  docker-compose.yaml  package-lock.json  package.json
airflow/dags/: recalls_etl_v1.py
arquitetura/: index.html
dashboard/: ecommerceED.pbit  index.html
database_base/: database.sql  docker-compose.yml
database_dimensional/: database.sql  docker-compose.yml
docs/: arquitetura.md  dashboard.md  etl.md  ferramentas.md  index.md  padroes.md  test.md
etl/: index.html
ferramentas/: index.html
padroes/: index.html
presentation/: README.md
sandbox/dags/: get_dag.py  test_hello_spark.py
sandbox/notebooks/: Untitled.ipynb
sandbox/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
sandbox/spark/app/: bronze-spark.py  gold-spark.py  hello-world-spark.py  leading-spark.py  silver-spark.py
search/: search_index.json
test/: index.html
